syntax = "proto3";

package notification;

option go_package = "./api/proto/pb";

import "google/protobuf/struct.proto";

message SendNotificationRequest {
    string to = 1;
    string template_name = 2;
    google.protobuf.Struct data = 3;
}

message SendNotificationResponse {
    bool success = 1;
    string message = 2;
}

service NotificationService {
    rpc SendNotification(SendNotificationRequest) returns (SendNotificationResponse) {}
}
